--- a/index.html
+++ b/index.html
@@ -200,31 +200,57 @@
             </div>
         </section>
 
-        <section id="contact" class="contact-section">
-            <div class="container">
-                <h2>Hubungi Kami</h2>
-                <p>Punya pertanyaan atau ingin menyampaikan saran? Kami siap mendengarkan Anda.</p>
-                <div class="contact-grid">
-                    <div class="contact-info">
-                        <h3>Informasi Kontak</h3>
-                        <p><i class="fas fa-map-marker-alt"></i> Jl.Halim Perdana Kusuma,Ponorogo, Indonesia</p>
-                        <p><i class="fas fa-phone-alt"></i>082228164310</p>
-                        <p><i class="fas fa-envelope"></i> raditnyasandy@gmail.com</p>
-                        <p><i class="fas fa-clock"></i> Senin - Sabtu: 08:00 - 17:00 WIB</p>
-                    </div>
-                    <div class="contact-form">
-                        <h3>Kirim Pesan kepada Kami</h3>
-                        <form>
-                            <input type="text" placeholder="Nama Lengkap" required>
-                            <input type="email" placeholder="Email Anda" required>
-                            <input type="text" placeholder="Subjek Pesan">
-                            <textarea placeholder="Pesan Anda" rows="5" required></textarea>
-                            <button type="submit" class="btn primary-btn">Kirim Pesan</button>
-                        </form>
-                    </div>
-                </div>
+<section id="contact" class="contact-section">
+    <div class="container">
+        <h2>Hubungi Kami</h2>
+        <p>Punya pertanyaan atau ingin menyampaikan saran? Kami siap mendengarkan Anda.</p>
+        <div class="contact-grid">
+            <!-- Informasi Kontak -->
+            <div class="contact-info">
+                <h3>Informasi Kontak</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Jl. Halim Perdana Kusuma, Ponorogo, Indonesia</p>
+                <p><i class="fas fa-phone-alt"></i> 082228164310</p>
+                <p><i class="fas fa-envelope"></i> raditnyasandy@gmail.com</p>
+                <p><i class="fas fa-clock"></i> Senin - Sabtu: 08:00 - 17:00 WIB</p>
             </div>
-        </section>
+
+            <!-- Formulir Kirim Pesan -->
+            <div class="contact-form">
+                <h3>Kirim Pesan kepada Kami</h3>
+                <form onsubmit="return false;">
+                    <input type="text" id="nama" placeholder="Nama Lengkap" required>
+                    <input type="email" id="email" placeholder="Email Anda" required>
+                    <input type="text" id="subjek" placeholder="Subjek Pesan">
+                    <textarea id="pesan" placeholder="Pesan Anda" rows="5" required></textarea>
+                    <a id="wa-link" href="#" target="_blank" class="btn primary-btn">Kirim Pesan via WhatsApp</a>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Script WhatsApp -->
+<script>
+    const waLink = document.getElementById('wa-link');
+    waLink.addEventListener('click', () => {
+        const nama = document.getElementById('nama').value.trim();
+        const email = document.getElementById('email').value.trim();
+        const subjek = document.getElementById('subjek').value.trim() || '-';
+        const pesan = document.getElementById('pesan').value.trim();
+
+        if (!nama || !email || !pesan) {
+            alert('Harap lengkapi semua kolom yang wajib diisi.');
+            return;
+        }
+
+        const noWA = '6282228164310'; // Ganti dengan nomor WhatsApp tujuan Anda (tanpa +)
+        const teks = `Halo, saya ${Raditya}%0AEmail: ${raditnyasandy@gmail.com}%0ASubjek: ${ada yang di bantu}%0APesan: ${mau berlanggan internet}`;
+        const url = `https://wa.me/${6282228164310}?text=${encodeURIComponent(teks)}`;
+        
+        waLink.href = url;
+    });
+</script>
+
     </main>
 
     <footer>
