--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <header class="sticky-header">
         <div class="container">
             <div class="logo">
-              
                 <span>NETWORK RDTS</span>
             </div>
             <nav class="main-nav">
@@ -87,7 +86,7 @@
                 <p>Nikmati komunikasi yang jernih dan tak terbatas dengan paket suara dan SMS kami.</p>
             </div>
             <div class="service-item">
-                <i class="fas fa-network-wired"></i> <!-- Ubah ikon di sini -->
+                <i class="fas fa-network-wired"></i>
                 <h3>Paket Internet</h3>
                 <p>Pilih opsi yang paling sesuai dengan gaya hidup Anda, fleksibel dan mudah digunakan.</p>
             </div>
@@ -200,99 +199,72 @@
             </div>
         </section>
 
-<section id="contact" class="contact-section">
-    <div class="container">
-        <h2>Hubungi Kami</h2>
-        <p>Punya pertanyaan atau ingin menyampaikan saran? Kami siap mendengarkan Anda.</p>
-        <div class="contact-grid">
-            <!-- Informasi Kontak -->
-            <div class="contact-info">
-                <h3>Informasi Kontak</h3>
-                <p><i class="fas fa-map-marker-alt"></i> Jl. Halim Perdana Kusuma, Ponorogo, Indonesia</p>
-                <p><i class="fas fa-phone-alt"></i> 082228164310</p>
-                <p><i class="fas fa-envelope"></i> raditnyasandy@gmail.com</p>
-                <p><i class="fas fa-clock"></i> Senin - Sabtu: 08:00 - 17:00 WIB</p>
+        <section id="contact" class="contact-section">
+            <div class="container">
+                <h2>Hubungi Kami</h2>
+                <p>Punya pertanyaan atau ingin menyampaikan saran? Kami siap mendengarkan Anda.</p>
+                <div class="contact-grid">
+                    <div class="contact-info">
+                        <h3>Informasi Kontak</h3>
+                        <p><i class="fas fa-map-marker-alt"></i> Jl.Halim Perdana Kusuma,Ponorogo, Indonesia</p>
+                        <p><i class="fas fa-phone-alt"></i>082228164310</p>
+                        <p><i class="fas fa-envelope"></i> raditnyasandy@gmail.com</p>
+                        <p><i class="fas fa-clock"></i> Senin - Sabtu: 08:00 - 17:00 WIB</p>
+                    </div>
+                    <div class="contact-form">
+                        <h3>Kirim Pesan kepada Kami</h3>
+                        <form>
+                            <input type="text" placeholder="Nama Lengkap" required>
+                            <input type="email" placeholder="Email Anda" required>
+                            <input type="text" placeholder="Subjek Pesan">
+                            <textarea placeholder="Pesan Anda" rows="5" required></textarea>
+                            <button type="submit" class="btn primary-btn">Kirim Pesan</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-
-            <!-- Formulir Kirim Pesan -->
-            <div class="contact-form">
-                <h3>Kirim Pesan kepada Kami</h3>
-                <form onsubmit="return false;">
-                    <input type="text" id="nama" placeholder="Nama Lengkap" required>
-                    <input type="email" id="email" placeholder="Email Anda" required>
-                    <input type="text" id="subjek" placeholder="Subjek Pesan">
-                    <textarea id="pesan" placeholder="Pesan Anda" rows="5" required></textarea>
-                    <a id="wa-link" href="#" target="_blank" class="btn primary-btn">Kirim Pesan via WhatsApp</a>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Script WhatsApp -->
-<script>
-    const waLink = document.getElementById('wa-link');
-    waLink.addEventListener('click', () => {
-        const nama = document.getElementById('nama').value.trim();
-        const email = document.getElementById('email').value.trim();
-        const subjek = document.getElementById('subjek').value.trim() || '-';
-        const pesan = document.getElementById('pesan').value.trim();
-
-        if (!nama || !email || !pesan) {
-            alert('Harap lengkapi semua kolom yang wajib diisi.');
-            return;
-        }
-
-        const noWA = '6282228164310'; // Ganti dengan nomor WhatsApp tujuan Anda (tanpa +)
-        const teks = `Halo, saya ${nama}%0AEmail: ${email}%0ASubjek: ${subjek}%0APesan: ${pesan}`;
-        const url = `https://wa.me/6282228164310${noWA}?text=${encodeURIComponent(teks)}`;
-        
-        waLink.href = url;
-    });
-</script>
-
+        </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <h3>NETWORK RDTS</h3>
-                    <p>Koneksi Cepat, Hidup Lebih Baik.</p>
-                </div>
-                <div class="footer-links">
-                    <h4>Tautan Cepat</h4>
-                    <ul>
-                        <li><a href="#about">Tentang Kami</a></li>
-                        <li><a href="#packages">Paket</a></li>
-                        <li><a href="#coverage">Cakupan</a></li>
-                        <li><a href="#">Syarat & Ketentuan</a></li>
-                    </ul>
-                </div>
-                <div class="footer-social">
-                    <h4>Ikuti Kami</h4>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><a href="#"><i class="fab fa-twitter"></i></a></a>
-                    <a href="#"><a href="#"><i class="fab fa-linkedin-in"></i></a></a>
-                </div>
+<footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-brand">
+                <h3>NETWORK RDTS</h3>
+                <p>Koneksi Cepat, Hidup Lebih Baik.</p>
             </div>
+
+            <div class="footer-links">
+                <h4>Tautan Cepat</h4>
+                <ul>
+                    <li><a href="#about">Tentang Kami</a></li>
+                    <li><a href="#packages">Paket</a></li>
+                    <li><a href="#coverage">Cakupan</a></li>
+                    <li><a href="#">Syarat & Ketentuan</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-social">
+                <h4>Ikuti Kami</h4>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+
+            <!-- Tambahan baru: Lokasi ISP -->
+            <div class="footer-location">
+                <h4>Lokasi ISP Kami</h4>
+                <img src="maps1.png" alt="Lokasi ISP" style="width: 100%; max-width: 250px; border-radius: 8px; margin-bottom: 10px;">
+                <p><a href="https://maps.google.com/?q=Lokasi+ISP" target="_blank">Lihat di Google Maps</a></p>
+            </div>
+        </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 NETWORK RDTS. Hak Cipta Dilindungi Undang-Undang.</p>
+                <p>© 2025 NETWORK RDTS. Hak Cipta Dilindungi Undang-Undang.</p>
             </div>
         </div>
     </footer>
 
-    <script>
-        document.querySelector('.hamburger').addEventListener('click', function() {
-            document.querySelector('.nav-links').classList.toggle('active');
-        });
-
-        document.querySelectorAll('.nav-links li a').forEach(item => {
-            item.addEventListener('click', () => {
-                document.querySelector('.nav-links').classList.remove('active');
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
