--- a/index.html
+++ b/index.html
@@ -1,193 +1,176 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Jaringan Internet & ISP - Edukasi Teknologi</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Edukasi ISP & Jaringan - Network RDTS</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <div class="container">
-            <a href="#home" class="logo" aria-label="Edukasi ISP dan Jaringan Home">
-                <img src="jaringanwifi.jpg" alt="Logo Edukasi Jaringan" width="45" height="45">
-                <span>Edukasi ISP & Jaringan</span>
-            </a>
-            <nav class="main-nav" aria-label="Main Navigation">
-                <ul class="nav-links">
-                    <li><a href="#home">Beranda</a></li>
-                    <li><a href="#about">Apa itu ISP?</a></li>
-                    <li><a href="#services">Jenis Koneksi</a></li> <li><a href="#benefits">Manfaat ISP</a></li> <li><a href="#coverage">Cakupan Jaringan</a></li>
-                    <li><a href="#contact">Kontak</a></li>
-                </ul>
-                <button class="hamburger" aria-label="Toggle navigation menu">&#9776;</button>
-            </nav>
-        </div>
-    </header>
-
-    <main>
-        <section id="home" class="hero fade-in">
-            <div class="container hero-content">
-                <h1>Pelajari Dunia Jaringan Internet</h1>
-                <p>Pahami cara kerja koneksi internet dan peran penting **ISP** dalam kehidupan digital modern.</p>
-                <div> <a href="#about" class="btn primary-btn">Apa Itu ISP?</a>
-                    <a href="#services" class="btn secondary-btn">Jenis Koneksi</a>
-                </div>
-            </div>
-        </section>
-
-        <section id="about" class="about-section fade-in">
-            <div class="container">
-                <h2 class="section-heading">Apa Itu ISP?</h2>
-                <img src="logo1.jpg" alt="Ilustrasi Internet Service Provider" class="about-logo" width="180" height="180">
-                <p><strong>ISP (Internet Service Provider)</strong> adalah perusahaan atau organisasi yang menyediakan layanan koneksi internet kepada individu, bisnis, atau organisasi lainnya. Mereka bertindak sebagai gerbang Anda menuju dunia online.</p>
-                <p>ISP menyediakan akses ke internet melalui berbagai teknologi canggih seperti **kabel optik (fiber optik)**, **DSL (Digital Subscriber Line)**, **satelit**, atau **jaringan seluler**.</p>
-                <a href="https://id.wikipedia.org/wiki/Penyedia_jasa_Internet" target="_blank" class="btn primary-btn">Pelajari Lebih Dalam tentang ISP</a> </div>
-        </section>
-
-        <section id="services" class="services-section fade-in">
-            <div class="container">
-                <h2 class="section-heading">Jenis Koneksi Internet</h2>
-                <p>Berikut beberapa jenis koneksi yang umum digunakan untuk mengakses internet:</p>
-                <div class="service-grid features-grid"> <div class="service-item">
-                        <i class="fas fa-wifi" aria-hidden="true"></i>
-                        <h3>Wi-Fi</h3>
-                        <p>Koneksi nirkabel lokal yang ideal untuk rumah, kantor, atau tempat umum.</p>
-                    </div>
-                    <div class="service-item">
-                        <i class="fas fa-broadcast-tower" aria-hidden="true"></i>
-                        <h3>Jaringan Seluler (4G/5G)</h3>
-                        <p>Koneksi internet portabel melalui jaringan operator seluler, sempurna untuk mobilitas.</p>
-                    </div>
-                    <div class="service-item">
-                        <i class="fas fa-satellite-dish" aria-hidden="true"></i>
-                        <h3>Satelit</h3>
-                        <p>Solusi konektivitas di daerah terpencil yang sulit dijangkau jaringan darat tradisional.</p>
-                    </div>
-                    <div class="service-item">
-                        <i class="fas fa-network-wired" aria-hidden="true"></i>
-                        <h3>Fiber Optik & Kabel</h3>
-                        <p>Koneksi berkecepatan tinggi dan sangat stabil untuk pengalaman internet tanpa batas.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="benefits" class="packages-section fade-in"> <div class="container">
-                <h2 class="section-heading">Manfaat Menggunakan ISP</h2>
-                <div class="package-grid">
-                    <div class="package-card">
-                        <h3>Akses Informasi Global</h3>
-                        <p>Membuka pintu ke dunia pengetahuan, berita terkini, dan sumber daya edukasi global yang tak terbatas.</p>
-                        <ul>
-                            <li>Berita dan Informasi Terkini</li>
-                            <li>Akses ke E-book dan Jurnal Ilmiah</li>
-                            <li>Tutorial dan Kursus Online</li>
-                        </ul>
-                    </div>
-                    <div class="package-card featured">
-                        <h3>Koneksi Stabil untuk Belajar & Kerja</h3>
-                        <p>Mendukung aktivitas daring krusial seperti sekolah online, rapat virtual, kolaborasi kerja tim, dan e-commerce.</p>
-                        <ul>
-                            <li>Rapat Online Tanpa Kendala</li>
-                            <li>Pembelajaran Jarak Jauh Efisien</li>
-                            <li>Kolaborasi Tim yang Produktif</li>
-                        </ul>
-                    </div>
-                    <div class="package-card">
-                        <h3>Komunikasi Tanpa Batas</h3>
-                        <p>Menghubungkan Anda dengan keluarga, teman, dan kolega melalui email, media sosial, serta aplikasi komunikasi real-time.</p>
-                        <ul>
-                            <li>Pesan Instan dan Video Call</li>
-                            <li>Interaksi Media Sosial</li>
-                            <li>Email Profesional dan Personal</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-<section id="coverage" class="coverage-section fade-in">
-  <div class="container">
-    <h2 class="section-heading">Cakupan Jaringan di Indonesia</h2>
-    <p>
-      Koneksi internet modern kini semakin menjangkau hampir seluruh pelosok Indonesia,
-      mempersempit kesenjangan digital.
-    </p>
-
-    <div class="coverage-map-placeholder">
-      <img src="maps1.png" alt="Peta Cakupan Jaringan Internet di Indonesia">
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <a href="#home" class="logo">
+        <img src="jaringanwifi.jpg" alt="Logo Jaringan" width="40" height="40">
+        <span>Network RDTS</span>
+      </a>
+      <nav class="main-nav">
+        <ul class="nav-links">
+          <li><a href="#home">Beranda</a></li>
+          <li><a href="#about">Apa itu ISP?</a></li>
+          <li><a href="#services">Jenis Koneksi</a></li>
+          <li><a href="#benefits">Manfaat</a></li>
+          <li><a href="#coverage">Cakupan</a></li>
+          <li><a href="#contact">Kontak</a></li>
+        </ul>
+        <button class="hamburger" aria-label="Toggle Menu">
+          <i class="fas fa-bars"></i>
+        </button>
+      </nav>
     </div>
+  </header>
 
-    <p class="map-note">
-      <strong>Catatan:</strong> Daerah urban umumnya memiliki akses ke jaringan fiber optik
-      dan seluler yang lebih cepat dan stabil.
-    </p>
+  <!-- Hero -->
+  <section id="home" class="hero fade-in">
+    <div class="container hero-content">
+      <h1>Belajar Dunia Internet & ISP</h1>
+      <p>Pahami cara kerja internet, jenis koneksi, dan manfaat ISP dalam era digital modern.</p>
+      <a href="#about" class="btn primary-btn">Pelajari ISP</a>
+      <a href="#services" class="btn secondary-btn">Jenis Koneksi</a>
+    </div>
+  </section>
 
-    <a href="#" class="coverage-link">
-      Lihat Detail Peta Cakupan Lainnya <i class="fas fa-arrow-right"></i>
-    </a>
+  <!-- About -->
+  <section id="about" class="fade-in">
+    <div class="container">
+      <h2 class="section-heading">Apa Itu ISP?</h2>
+      <p><strong>ISP (Internet Service Provider)</strong> adalah penyedia layanan internet untuk individu, bisnis, maupun organisasi. Teknologi yang digunakan meliputi fiber optik, DSL, satelit, hingga jaringan seluler.</p>
+      <a href="https://id.wikipedia.org/wiki/Penyedia_jasa_Internet" target="_blank" class="btn primary-btn">Baca Selengkapnya</a>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="fade-in">
+    <div class="container">
+      <h2 class="section-heading">Jenis Koneksi Internet</h2>
+      <div class="features-grid">
+        <div class="service-item">
+          <i class="fas fa-wifi"></i>
+          <h3>Wi-Fi</h3>
+          <p>Koneksi nirkabel untuk rumah, kantor, atau publik.</p>
+        </div>
+        <div class="service-item">
+          <i class="fas fa-broadcast-tower"></i>
+          <h3>4G / 5G</h3>
+          <p>Koneksi mobile cepat dan fleksibel dari provider seluler.</p>
+        </div>
+        <div class="service-item">
+          <i class="fas fa-satellite-dish"></i>
+          <h3>Satelit</h3>
+          <p>Solusi untuk wilayah terpencil dan sulit terjangkau.</p>
+        </div>
+        <div class="service-item">
+          <i class="fas fa-network-wired"></i>
+          <h3>Fiber & Kabel</h3>
+          <p>Koneksi stabil berkecepatan tinggi untuk segala kebutuhan.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Benefits -->
+  <section id="benefits" class="fade-in">
+    <div class="container">
+      <h2 class="section-heading">Manfaat ISP</h2>
+      <div class="features-grid">
+        <div class="service-item">
+          <h3>Akses Global</h3>
+          <p>Akses informasi, berita, kursus, dan pengetahuan tanpa batas.</p>
+        </div>
+        <div class="service-item">
+          <h3>Koneksi Stabil</h3>
+          <p>Belajar online, rapat virtual, dan e-commerce lebih lancar.</p>
+        </div>
+        <div class="service-item">
+          <h3>Komunikasi Mudah</h3>
+          <p>Email, chat, media sosial, hingga video call kapanpun.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- Perluasan Jaringan -->
+<section id="coverage" class="fade-in">
+  <div class="container">
+    <h2 class="section-heading">Perluasan Jaringan</h2>
+    <img src="maps1.png" alt="Peta Perluasan Jaringan Internet di Indonesia" style="max-width:100%; border-radius:12px;">
+    <p><small>Perluasan jaringan internet terus dilakukan agar akses cepat dan stabil dapat dinikmati hingga ke pelosok negeri.</small></p>
+    
+    <div class="network-expansion-info">
+      <p><strong>Perluasan jaringan</strong> adalah proses meningkatkan jangkauan dan kapasitas infrastruktur internet ke wilayah yang sebelumnya belum terlayani atau masih terbatas. 
+      Hal ini mencakup pembangunan infrastruktur baru (fiber optik, BTS, satelit), peningkatan kapasitas jaringan, pemerataan akses di daerah pedesaan maupun terpencil, serta modernisasi teknologi dari jaringan lama ke yang lebih modern.</p>
+    </div>
   </div>
 </section>
 
 
-        <section id="contact" class="contact-section fade-in">
-            <div class="container">
-                <h2 class="section-heading">Hubungi Kami</h2>
-                <div class="contact-grid">
-                    <div class="contact-info">
-                        <h3>Informasi Kontak</h3>
-                        <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> Jl. Halim Perdana Kusuma, Indonesia</p>
-                        <p><i class="fas fa-phone-alt" aria-hidden="true"></i> 082228164310</p>
-                        <p><i class="fas fa-envelope" aria-hidden="true"></i> networkrdts.com</p>
-                        <div class="footer-social"> <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="contact-form">
-                        <h3>Kirim Pesan</h3>
-                        <form action="#" method="POST"> <input type="text" name="name" placeholder="Nama Lengkap Anda" required aria-label="Nama Lengkap">
-                            <input type="email" name="email" placeholder="Email Anda" required aria-label="Email">
-                            <textarea name="message" placeholder="Pesan Anda" rows="6" required aria-label="Pesan Anda"></textarea>
-                            <button type="submit" class="btn primary-btn">Kirim Pesan</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </main>
-
-<footer>
-  <div class="container footer-content">
-    <div class="footer-section">
-      <h4>Tautan</h4>
-      <ul>
-        <li><a href="#home">Beranda</a></li>
-        <li><a href="#about">Tentang</a></li>
-        <li><a href="#services">Layanan</a></li>
-        <li><a href="#contact">Kontak</a></li>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <h4>Sosial Media</h4>
-      <div class="social-links">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
+  <!-- Contact -->
+  <section id="contact" class="fade-in">
+    <div class="container">
+      <h2 class="section-heading">Hubungi Kami</h2>
+      <div class="contact-grid">
+        <div class="contact-info">
+          <p><i class="fas fa-map-marker-alt"></i> Jl. Halim Perdana Kusuma, Indonesia</p>
+          <p><i class="fas fa-phone"></i> 0822-2816-4310</p>
+          <p><i class="fas fa-envelope"></i> info@networkrdts.com</p>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+        <div class="contact-form">
+          <form action="#" method="POST">
+            <input type="text" name="name" placeholder="Nama Lengkap" required>
+            <input type="email" name="email" placeholder="Email Anda" required>
+            <textarea name="message" rows="6" placeholder="Pesan Anda" required></textarea>
+            <button type="submit" class="btn primary-btn">Kirim Pesan</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="footer-bottom">
-    &copy; 2025 Network RDTS. All rights reserved.
-  </div>
-</footer>
-    <script src="script.js"></script>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container footer-content">
+      <div class="footer-section">
+        <h4>Tautan</h4>
+        <ul>
+          <li><a href="#home">Beranda</a></li>
+          <li><a href="#about">Tentang</a></li>
+          <li><a href="#services">Layanan</a></li>
+          <li><a href="#contact">Kontak</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Sosial</h4>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 2025 Network RDTS. All rights reserved.
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
