--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edukasi ISP & Jaringan - Network RDTS</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link href="logonetwork.jpg" rel="stylesheet">
+  <link rel="icon" href="logonetwork.jpg" type="image/jpeg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -168,4 +167,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
