--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <a href="#home" class="logo">
-        <img src="jaringanwifi.jpg" alt="Logo Jaringan" width="40" height="40">
+        <img src="logonetwork.jpg" alt="Logo Jaringan" width="40" height="40">
         <span>Network RDTS</span>
       </a>
       <nav class="main-nav">
@@ -167,6 +167,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
